first chapter + docker

--- a/code/react-vs-vanilla-js-example/just-js/index.html
+++ b/code/react-vs-vanilla-js-example/just-js/index.html
@@ -13,7 +13,7 @@
 <body>
   <h1>My Todos</h1>
   <div class="card">
-    <h2>Learn React</h2>
+    <h2>Learn React js refresh</h2>
     <div class="actions">
       <button class="btn">Delete</button>
     </div>
